hphp/test/slow/reified_generics/error-class-creation-3.php.expectf
Fatal error: Class C requires 2 generics but 3 given in %s on line 5
